# dynamic-schema-graphql-python-django

./: .env.example  .gitignore  Dockerfile  README-CH.md  README.md  adventure_game_heroes.sql  manage.py  pyproject.toml
dynamic_schema_GraphQL_python_django/: asgi.py  connections.py  settings.py  urls.py  wsgi.py
dynamic_schema_graphql/: asgi.py  connections.py  settings.py  urls.py  wsgi.py
etc/: database.yaml.example  schema.yaml.example
graphql_app/: apps.py  filters.py  models.py  schema.py
graphql_app/static/: swagger.json  swagger.yaml
myapp/: schema.py
